--- a/appointment.fxml
+++ b/appointment.fxml
@@ -1,28 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="494.0" prefWidth="556.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<AnchorPane prefHeight="494.0" prefWidth="556.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <children>
-      <Label layoutX="39.0" layoutY="429.0" prefHeight="33.0" prefWidth="78.0" text="Last Action :" />
-      <Button fx:id="addApptBtn" layoutX="39.0" layoutY="94.0" mnemonicParsing="false" onAction="#showAddApptInfo" prefHeight="25.0" prefWidth="139.0" text="Add Appointment" />
-      <Button fx:id="cancelApptBtn" layoutX="220.0" layoutY="94.0" mnemonicParsing="false" onAction="#showCancelApptInfo" prefHeight="25.0" prefWidth="139.0" text="Cancel Appointment" />
-      <Button fx:id="searchApptBtn" layoutX="387.0" layoutY="94.0" mnemonicParsing="false" onAction="#showSearchApptInfo" prefHeight="25.0" prefWidth="139.0" text="Search Appointment" />
+      <Label layoutX="14.0" layoutY="446.0" prefHeight="34.0" prefWidth="90.0" text="Last Action :" />
+      <Button fx:id="addApptBtn" layoutX="22.0" layoutY="93.0" mnemonicParsing="false" onAction="#showAddApptInfo" prefHeight="26.0" prefWidth="155.0" text="Add Appointment" />
+      <Button fx:id="cancelApptBtn" layoutX="204.0" layoutY="94.0" mnemonicParsing="false" onAction="#showCancelApptInfo" prefHeight="26.0" prefWidth="155.0" text="Cancel Appointment" />
+      <Button fx:id="searchApptBtn" layoutX="386.0" layoutY="94.0" mnemonicParsing="false" onAction="#showSearchApptInfo" prefHeight="26.0" prefWidth="155.0" text="Search Appointment" />
       <TextField fx:id="clientTxt" layoutX="203.0" layoutY="183.0" prefHeight="25.0" prefWidth="174.0" visible="false" />
       <TextField fx:id="patientTxt" layoutX="203.0" layoutY="235.0" prefHeight="25.0" prefWidth="174.0" visible="false" />
-      <Label fx:id="clientNameLbl" layoutX="100.0" layoutY="187.0" prefHeight="17.0" prefWidth="78.0" text="Client Name   :" visible="false" />
-      <Label fx:id="patientNamelbl" layoutX="100.0" layoutY="239.0" prefHeight="17.0" prefWidth="78.0" text="Patient Name :" visible="false" />
+      <Label fx:id="clientNameLbl" layoutX="68.0" layoutY="187.0" prefHeight="18.0" prefWidth="110.0" text="Client Name :" visible="false" />
+      <Label fx:id="patientNamelbl" layoutX="68.0" layoutY="239.0" prefHeight="18.0" prefWidth="110.0" text="Patient Name :" visible="false" />
       <DatePicker fx:id="dateTxt" layoutX="203.0" layoutY="292.0" visible="false" />
-      <Label fx:id="dateLbl" layoutX="100.0" layoutY="296.0" prefHeight="17.0" prefWidth="78.0" text="Date              :" visible="false" />
-      <Label fx:id="timeLbl" layoutX="100.0" layoutY="349.0" prefHeight="17.0" prefWidth="78.0" text="Time(Military):" visible="false" />
+      <Label fx:id="dateLbl" layoutX="68.0" layoutY="296.0" prefHeight="18.0" prefWidth="110.0" text="Date              :" visible="false" />
+      <Label fx:id="timeLbl" layoutX="68.0" layoutY="349.0" prefHeight="18.0" prefWidth="110.0" text="Time(Military):" visible="false" />
       <TextField fx:id="timeTxt" layoutX="203.0" layoutY="345.0" prefHeight="25.0" prefWidth="174.0" visible="false" />
-      <Button fx:id="addApptFinalBtn" layoutX="209.0" layoutY="380.0" mnemonicParsing="false" onAction="#addAppointment" prefHeight="25.0" prefWidth="139.0" text="Add Appointment" visible="false" />
-      <Button fx:id="cancelApptFinalBtn" layoutX="209.0" layoutY="380.0" mnemonicParsing="false" onAction="#cancelAppointment" prefHeight="25.0" prefWidth="139.0" text="Cancel Appointment" visible="false" />
-      <Button fx:id="searchApptFinalBtn" layoutX="209.0" layoutY="380.0" mnemonicParsing="false" onAction="#searchAppointment" prefHeight="25.0" prefWidth="139.0" text="Search" visible="false" />
-      <Label fx:id="lastActionLbl" layoutX="117.0" layoutY="429.0" prefHeight="33.0" prefWidth="373.0" text="Label" visible="false" />
+      <Button fx:id="addApptFinalBtn" layoutX="203.0" layoutY="406.0" mnemonicParsing="false" onAction="#addAppointment" prefHeight="26.0" prefWidth="174.0" text="Add Appointment" visible="false" />
+      <Button fx:id="cancelApptFinalBtn" layoutX="203.0" layoutY="406.0" mnemonicParsing="false" onAction="#cancelAppointment" prefHeight="26.0" prefWidth="174.0" text="Cancel Appointment" visible="false" />
+      <Button fx:id="searchApptFinalBtn" layoutX="203.0" layoutY="406.0" mnemonicParsing="false" onAction="#searchAppointment" prefHeight="26.0" prefWidth="174.0" text="Search Appointment" visible="false" />
+      <Label fx:id="lastActionLbl" layoutX="100.0" layoutY="446.0" prefHeight="34.0" prefWidth="439.0" text="Label" visible="false" />
+      <Button fx:id="mainMenuBtn" layoutX="204.0" layoutY="26.0" mnemonicParsing="false" onAction="#mainMenu" prefHeight="26.0" prefWidth="155.0" text="Main Menu" />
    </children>
 </AnchorPane>
