--- a/searchClient.fxml
+++ b/searchClient.fxml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="sample.Controller"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="350.0" prefWidth="340.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+   <children>
+      <Label layoutX="27.0" layoutY="56.0" prefHeight="18.0" prefWidth="108.0" text="Client Name :" />
+      <Label layoutX="27.0" layoutY="118.0" prefHeight="18.0" prefWidth="108.0" text="Client Email :" />
+      <TextField fx:id="clientSearchNameTxt" layoutX="145.0" layoutY="53.0" />
+      <TextField fx:id="clientSearchEmailTxt" layoutX="145.0" layoutY="114.0" />
+      <Button fx:id="searchPatientsBtn" layoutX="75.0" layoutY="191.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="190.0" text="Search Patients" />
+      <Button fx:id="searchApptHistoryBtn" layoutX="75.0" layoutY="290.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="190.0" text="Search Appt History" />
+      <Button fx:id="searchPaymentHistoryBtn" layoutX="75.0" layoutY="241.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="190.0" text="Search Payment History" />
+   </children>
 </AnchorPane>
