--- a/updateClient.fxml
+++ b/updateClient.fxml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="sample.Controller"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="200.0" prefWidth="320.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+   <children>
+      <Label layoutX="32.0" layoutY="42.0" text="Client Name :" />
+      <Label layoutX="34.0" layoutY="94.0" text="Client Email :" />
+      <TextField fx:id="searchClientNameTxt" layoutX="151.0" layoutY="38.0" />
+      <TextField fx:id="searchClientEmailTxt" layoutX="151.0" layoutY="90.0" />
+      <Button fx:id="searchClientBtn" layoutX="85.0" layoutY="146.0" mnemonicParsing="false" onAction="#displayUpdateAllScreen" prefHeight="26.0" prefWidth="149.0" text="Search Client" />
+   </children>
 </AnchorPane>
