--- a/addPatient.fxml
+++ b/addPatient.fxml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="sample.Controller"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="400.0" prefWidth="454.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+   <children>
+      <Label layoutX="36.0" layoutY="228.0" prefHeight="25.0" prefWidth="103.0" text="Gender" />
+      <Label layoutX="36.0" layoutY="57.0" prefHeight="25.0" prefWidth="103.0" text="Patient Name:" />
+      <Label layoutX="36.0" layoutY="175.0" prefHeight="25.0" prefWidth="103.0" text="Patient Breed" />
+      <Label layoutX="36.0" layoutY="119.0" prefHeight="25.0" prefWidth="103.0" text="Patient Species" />
+      <TextField fx:id="patientName" layoutX="183.0" layoutY="57.0" />
+      <ComboBox fx:id="gender" layoutX="183.0" layoutY="228.0" prefWidth="150.0" promptText="Choose Gender" />
+      <TextField fx:id="species" layoutX="183.0" layoutY="119.0" />
+      <TextField fx:id="breed" layoutX="183.0" layoutY="175.0" />
+      <Button fx:id="createPatient" layoutX="180.0" layoutY="299.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="95.0" text="Create Patient" />
+   </children>
 </AnchorPane>
